WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160690
[Win] Warning fix.
https://bugs.webkit.org/show_bug.cgi?id=160690
Summary
[Win] Warning fix.
Per Arne Vollan
Reported
2016-08-09 07:01:47 PDT
We currently have a few warnings like this one: 1>c:\projects\webkit\opensource\source\webcore\platform\network\ProtectionSpaceHash.h(43): warning C4838: conversion from 'WebCore::ProtectionSpaceServerType' to 'unsigned int' requires a narrowing conversion (compiling source file C:\Projects\WebKit\OpenSource\Source\WebCore\platform\network\CredentialStorage.cpp)
Attachments
Patch
(1.48 KB, patch)
2016-08-09 07:25 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-08-09 07:25:17 PDT
Created
attachment 285638
[details]
Patch
Per Arne Vollan
Comment 2
2016-08-10 00:53:38 PDT
Thanks for reviewing :)
WebKit Commit Bot
Comment 3
2016-08-10 01:15:52 PDT
Comment on
attachment 285638
[details]
Patch Clearing flags on attachment: 285638 Committed
r204328
: <
http://trac.webkit.org/changeset/204328
>
WebKit Commit Bot
Comment 4
2016-08-10 01:15:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug