[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=160690

Reviewed by Sam Weinig.

Use static cast to convert from enum to unsigned.

* platform/network/ProtectionSpaceHash.h:
(WebCore::ProtectionSpaceHash::hash):


Canonical link: https://commits.webkit.org/178842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204328 268f45cc-cd09-0410-ab3c-d52691b4dbfc